# core-plugins

./: .bzrignore  .gitignore  COPYRIGHT  Do Addins.mds  DoPlugins.mds  Makefile.am  Makefile.include  Packages.mdse  README  ar.po  ast.po  autogen.sh  build.rules.mk  configure.ac  cs.po  en_CA.po  extract_files.sh  extract_references.sh  extract_resources.sh  fa.po  fi.po  fr.po  gl.po  hr.po  hu.po  mdtoolize  nl.po  pl.po  repo.py  ru.po  sk.po  tl.po  update_makefile.sh  vi.po  zh_CN.po
Amarok/: Amarok.cs  Amarok.mdp  Amarok.mdp.in  AmarokEnqueueAction.cs  AmarokItemSource.cs  AmarokItems.cs  Makefile.am  amarok.pc.in
Amarok/src/: Amarok.addin.xml  AmarokEnqueueAction.cs  AmarokItemSource.cs  AmarokItems.cs  AmarokPlayAction.cs  MusicItems.cs
AppendText/: Makefile.am
Archive/: Archive.mdp  ExtractAction.cs  Makefile.am
Archive/Resources/: Archive.addin.xml  Archive.addin.xml.in
Archive/src/: Archive.addin.xml  ArchiveTypeItem.cs  CreateArchiveAction.cs  ExtractArchiveAction.cs
Banshee/: Banshee.mdp  Banshee.mdp.in  Makefile.am  README  banshee.pc.in  indexer.patch
Banshee/Resources/: Banshee.addin.xml  Banshee.addin.xml.in
Banshee/src/: AbstractPlaybackAction.cs  AbstractPlayerAction.cs  AssemblyInfo.cs.in  Banshee.addin.xml  Banshee.cs  BansheeAction.cs  BansheeDBus.cs  BansheeIndexer.cs  BansheeItemSource.cs  BansheeItems.cs  BansheePlayAction.cs  BansheeRunnableItem.cs  BrowseMediaItems.cs  EnqueueAction.cs  Makefile.am  MediaItemSource.cs  MediaItems.cs  NextAction.cs  PauseAction.cs  PlayAction.cs  PreviousAction.cs  SearchCollectionAction.cs  Util.cs
Bibtex/: Bibtex.addin.xml  Bibtex.mdp  Makefile.am
Bibtex/Resources/: Bibtex.addin.xml  Bibtex.addin.xml.in
Bibtex/gtk-gui/: Bibtex.Configuration.cs  Do.Addins.Bibtex.Configuration.cs  gui.stetic  objects.xml
Bibtex/src/: BibtexAuthorsItem.cs  BibtexCiteAction.cs  BibtexItem.cs  BibtexItemSource.cs  Configuration.cs
BundledLibraries/: Makefile.am
BundledLibraries/libgoogle-data-mono-1.4.0.2/: Makefile
BundledLibraries/telepathy-sharp/: AUTHORS  Makefile.am  PROVIDENCE  README  telepathy-sharp.sln
Cl.ickable/: Cl.ickable.mdp  Makefile.am
Cl.ickable/Resources/: Cl.ickable.addin.xml  Cl.ickable.addin.xml.in
Cl.ickable/src/: ClickableItemSource.cs  ClipAction.cs  WebClipsItem.cs
ClawsMail/: ClawsMail.mdp  ClawsMail.mds  Makefile  Makefile.am  Makefile.in
ClawsMail/Resources/: ClawsMail.addin.xml  ClawsMail.addin.xml.in
ClawsMail/resources/: ClawsMail.addin.xml
ClawsMail/src/: AssemblyInfo.cs  Claws.cs  ClawsActionBase.cs  ClawsActionNewMail.cs  ClawsActionOffline.cs  ClawsActionOnline.cs  ClawsActionQuit.cs  ClawsActionReceiveAll.cs  ClawsContactDetailItem.cs  ClawsContactsItemSource.cs  ClawsSimpleActions.cs
Confluence/: Confluence.addin.xml  Confluence.mdp  Makefile.am
Confluence/Resources/: Confluence.addin.xml  Confluence.addin.xml.in
Confluence/gtk-gui/: Confluence.ConfluenceConfigWidget.cs  gui.stetic  objects.xml
Confluence/src/: ConfluenceConfigWidget.cs  ConfluenceConfiguration.cs  ConfluenceSearchAction.cs
Del.icio.us/: Makefile.am  del.icio.us.mdp
Del.icio.us/Resources/: delicious.addin.xml  delicious.addin.xml.in
Del.icio.us/src/: BookmarksItemSource.cs  Configuration.cs  Delicious.cs  NewBookmarkAction.cs  Preferences.cs  SearchAction.cs  TagItem.cs  TagsItemSource.cs
DiskMounter/: DiskMounter.mdp  DriveItemSource.cs  Makefile.am  MountAction.cs  MountedDriveItem.cs  OpenVolumeAction.cs  UnmountAction.cs  UnmountedDriveItem.cs
DiskMounter/Resources/: DiskMounter.addin.xml  DiskMounter.addin.xml.in
DiskMounter/src/: DiskMounter.addin.xml  DriveItem.cs  DriveItemSource.cs  MountAction.cs  OpenVolumeAction.cs  UnmountAction.cs
Dropbox/: Dropbox.mdp  Makefile.am
Dropbox/Resources/: Dropbox.addin.xml  Dropbox.addin.xml.in
Dropbox/gtk-gui/: Dropbox.DropboxConfig.cs  gui.stetic
Dropbox/src/: Dropbox.cs  DropboxAbstractAction.cs  DropboxLinkAction.cs  DropboxPuburlAction.cs  DropboxRevisionsAction.cs  DropboxShareAction.cs  DropboxStartAction.cs  DropboxStopAction.cs  DropboxUnshareAction.cs  DropboxWebInterfaceAction.cs
Emesene/: Emesene.mdp  Makefile.am
Emesene/Resources/: Emesene.addin.xml  Emesene.addin.xml.in
Emesene/src/: Emesene.cs  EmeseneAvatarItem.cs  EmeseneAvatarItemSource.cs  EmeseneChangeAvatarAction.cs  EmeseneChangeNickAction.cs  EmeseneChangePSMAction.cs  EmeseneChangeStatusAction.cs  EmeseneChatAction.cs  (+5 more)
Empathy/: Empathy.mdp  Makefile.am
Epiphany/: Epiphany.mdp  Epiphany.mdp.in  EpiphanyBookmarkItemSource.cs  Makefile.am  epiphany.pc.in
Evolution/: Evolution.mdp  Evolution.mdp.in  Evolution.pidb  Makefile.am  evolution.pc.in
Exaile/: Makefile.am
File/: CreateEmptyFileAction.cs  File.mdp  File.mdp.in  Makefile.am  file.pc.in
Firefox/: Firefox.mdp  Makefile.am  firefox.pc.in
Flickr/: Flickr.addin.xml  Flickr.mdp  Makefile.am
GCalendar/: DoGCal.cs  GCalendar.addin.xml  GCalendar.dll.mdb  GCalendar.mdp  GCalendarEventItem.cs  GCalendarItemSource.cs  GCalendarListEvents.cs  GCalendarNewEvent.cs  GCalendarSearchEvents.cs  Makefile  Makefile.am  Makefile.in  README  gcalendar.pc.in
GMailContacts/: GMailContacts.addin.xml  GMailContacts.mdp  Makefile.am
GNOME-Screenshot/: CurrentWindowScreenshotItem.cs  GNOME-Screenshot.mdp  Makefile.am  ScreenshotDelayItem.cs  ScreenshotItemSource.cs  WholeScreenScreenshotItem.cs  gnome-screenshot.pc.in
GNOME-Session/: GNOME-Session.addin.xml  GNOME-Session.mdp  GNOME-Session.mdp.in  Makefile.am  PowerManagement.cs  ScreenSaver.cs  SessionCommandItem.cs  SessionCommandsItemSource.cs  gnome-session.pc.in
GNOME-Terminal/: GNOME-Terminal.addin.xml  GNOME-Terminal.mdp  Makefile.am  OpenTerminalHereAction.boo  RunInTerminalAction.boo
GoogleCalculator/: GoogleCalculator.mdp  GoogleCalculator.mdp.in  GoogleCalculatorAction.addin.xml  GoogleCalculatorAction.cs  GoogleCalculatorCommand.cs  GoogleCalculatorCommand.dll.mdb  Makefile.am  Makefile.in  googlecalculator.pc.in
GoogleCalendar/: GCalendar.mdp  GoogleCalendar.mdp  Makefile.am
GoogleContacts/: GMailContacts.mdp  Makefile.am
(+1329 files in other folders)
