ACLOCAL_AMFLAGS = -I m4 -I m4/shamrock
EXTRA_DIST = COPYING COPYRIGHT AUTHORS

SUBDIRS = \
	po \
	BundledLibraries \
	Alias \
	AptURL \
	Archive \
	Baconator \
	Banshee \
	Bibtex \
	Cl.ickable \
	ClawsMail \
	Confluence \
	Del.icio.us \
	DiskMounter \
	Dropbox \
	Emesene \
	EOG-Slideshow \
	Epiphany \
	Evolution \
	Exaile \
	File \
	Firefox \
	Flickr \
	GNOME-Dictionary \
	GNOME-Screenshot \
	GNOME-Session \
	GNOME-Terminal \
	GoogleCalculator \
	GoogleCalendar \
	GoogleContacts \
	GoogleDocs \
	GoogleMaps \
	GoogleSearch \
	ImageShack \
	JIRA \
	Launchpad \
	LocateFiles \
	ManLookUp \
	Microblogging \
	MPD \
	NX \
	OpenSearch \
	Opera \
	Pastebin \
	Pidgin \
	PingFM \
	Putty \
	Quote \
	RememberTheMilk \
	RemindMe \
	RequestTracker \
	Rhythmbox \
	Riptide \
	RSS \
	Shelf \
	Skype \
	SqueezeCenter \
	SSH \
	StockQuote \
	SystemServices \
	Tasque \
	TerminalServerClient \
	Text \
	Thunderbird \
	TinyUrl \
	Tracker \
	Translate \
	Tomboy \
	Vinagre \
	VirtualBox \
	VolumeControl \
	WindowManager \
	Woof \
	Wordnet \
	Xmms2 \
	XRandR \
	YouTube \
	Zim \
	.

clean-local:
	-rm -rf $(top_builddir)/build
