ACLOCAL_AMFLAGS = -I m4 -I m4/shamrock
EXTRA_DIST = COPYING COPYRIGHT AUTHORS

SUBDIRS = \
	BundledLibraries \
	po \
	help \
	Alias \
	AptURL \
	Archive \
	Baconator \
	Banshee \
	Bibtex \
	Cl.ickable \
	ClawsMail \
	Confluence \
	Chromium \
	Del.icio.us \
	DiskMounter \
	Dropbox \
	Emesene \
	Empathy \
	EOG-Slideshow \
	Epiphany \
	Exaile \
	File \
	Firefox \
	Flickr \
	GNOME-Calculator \
	GNOME-Dictionary \
	GNOME-Screenshot \
	GNOME-Session \
	GNOME-Terminal \
	GoogleCalculator \
	GoogleCalendar \
	GoogleContacts \
	GoogleDocs \
	GoogleMaps \
	GoogleSearch \
	ImageShack \
	JIRA \
	Launchpad \
	LocateFiles \
	ManLookUp \
	Microblogging \
	MPD \
	NX \
	OpenSearch \
	Opera \
	Pastebin \
	Pidgin \
	PingFM \
	Putty \
	Qalculate \
	Quote \
	RememberTheMilk \
	RemindMe \
	RequestTracker \
	Rhythmbox \
	Riptide \
	RSS \
	Shelf \
	Skype \
	SqueezeCenter \
	SSH \
	StockQuote \
	SystemServices \
	Tasque \
	TerminalServerClient \
	Text \
	Thunderbird \
	TinyUrl \
	Tracker \
	Translate \
	Transmission \
	Tomboy \
	Vinagre \
	VirtualBox \
	VolumeControl \
	WindowManager \
	Woof \
	Wordnet \
	Xmms2 \
	XRandR \
	YouTube \
	Zim \
	.

clean-local:
	-rm -rf $(top_builddir)/build
