include $(top_srcdir)/build.rules.mk

ASSEMBLY=Amarok

FILES = \
	src/Amarok.cs \
	src/AmarokEnqueueAction.cs \
	src/AmarokItems.cs \
	src/AmarokItemSource.cs \
	src/AmarokPlayAction.cs \
	src/AssemblyInfo.cs \
	src/MusicItems.cs

RESOURCES = \
	src/Amarok.addin.xml

REFERENCES = \
	Mono.Data.Sqlite \
	Mono.Posix \
	System \
	System.Data \
	System.Xml \
	$(DO_UNIVERSE_LIBS)
